external db  config done

--- a/.env
+++ b/.env
@@ -15,6 +15,12 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+EXTERNAL_DB_HOST=sql8.freemysqlhosting.net
+EXTERNAL_DB_PORT=3306
+EXTERNAL_DB_DATABASE=sql8680624
+EXTERNAL_DB_USERNAME=sql8680624
+EXTERNAL_DB_PASSWORD=2IamnA1MgV
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
